[build-system]
requires = ["setuptools>=64", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-parser"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "plotille==5.0.0",
    "tqdm",
    "ijson",
    "msgpack",
    "orjson",
    "setuptools_scm>=6.2",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
py-modules = ["parser", "container_stats", "pod_latency_stats", "version"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[project.scripts]
kb-parser = "parser:main"
container-stats = "container_stats:main"
pod-latency-stats = "pod_latency_stats:main"
